# sorting

./: CMakeLists.txt  main.cpp
output/: insertion.txt  shell.txt
resources/: input.txt
src/: path.cpp
src/include/: generator.h  licensePlate.h  path.h  personName.h  sorting.h  sortingType.h
